--- a/taskmanager/templates/categories.html
+++ b/taskmanager/templates/categories.html
@@ -20,7 +20,19 @@
         </div>
         <div class="card-action">
           <a href="{{ url_for('edit_category', category_id=category.id) }}" class="btn green accent-4">Edit</a>
-          <a href="#"class="btn red">Delete</a>
+          <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn red">Delete</a>
+
+          <!-- Modal
+          <div id="modal-{{ category_id }}" class="modal">
+            <div class="modal-content">
+              <h4>Do you really want to delete this category?</h4>
+            </div>
+            <div class="modal-footer">
+              <a href="{{ url_for('delete_category', category_id=category.id) }}" class="btn-red">Delete</a>
+              <a href="modal-close" class="btn green accent-4">Cancel</a>
+            </div>
+          </div>
+          -->
         </div>
       </div>
     </div>
