--- a/taskmanager/templates/tasks.html
+++ b/taskmanager/templates/tasks.html
@@ -3,4 +3,12 @@
 
 <h3 class="orange darken-3 center-align">Tasks eller uppgifter</h3>
 
+<div class="row">
+    <div class="col s12 center-align">
+        <a href="{{ url_for('add_task') }}" class="btn-large orange darken-3">
+            Add Task <i class="fas fa-plus-square right"></i>
+        </a>
+    </div>
+</div>
+
 {% endblock %}
